set up mobie test gherkins

--- a/mobile-testing-gherkins.html
+++ b/mobile-testing-gherkins.html
@@ -109,20 +109,25 @@
             padding: 15px;
             border-radius: 5px;
             margin: 10px 0;
+            white-space: pre-line;
+            line-height: 1.6;
+            font-size: 14px;
         }
         .character-profile {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
-            padding: 20px;
+            padding: 15px;
             border-radius: 8px;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
         }
         .character-profile h3 {
-            margin: 0 0 10px 0;
+            margin: 0 0 8px 0;
+            font-size: 1.1em;
         }
         .character-profile p {
-            margin: 5px 0;
+            margin: 3px 0;
             opacity: 0.9;
+            font-size: 0.9em;
         }
         .test-matrix {
             background: #fff3e0;
@@ -257,37 +262,29 @@
                 <div class="section-content">
                     <div class="character-profile">
                         <h3>Keith Fellini - Baker/Validator</h3>
-                        <p><strong>Device:</strong> iPhone 15 Pro Max (High-end user)</p>
-                        <p><strong>Wallet:</strong> MetaMask Mobile + Sentinel Wallet</p>
-                        <p><strong>Balance:</strong> 3080.69 internal, 194.9 external</p>
-                        <p><strong>Authentication:</strong> Sentinel Wallet Login, 2FA mixed</p>
+                        <p><strong>Device:</strong> iPhone 15 Pro Max | <strong>Wallet:</strong> MetaMask Mobile + Sentinel Wallet</p>
+                        <p><strong>Balance:</strong> 3080.69 internal, 194.9 external | <strong>Auth:</strong> Sentinel Wallet Login, 2FA mixed</p>
                         <p><strong>Use Case:</strong> Professional validator with high-value assets</p>
                     </div>
 
                     <div class="character-profile">
                         <h3>Kanley Stubrick - Moderator</h3>
-                        <p><strong>Device:</strong> Samsung Galaxy S24 Ultra (Power user)</p>
-                        <p><strong>Wallet:</strong> WalletConnect + Google Auth</p>
-                        <p><strong>Balance:</strong> 55.88 internal, 684.61 external</p>
-                        <p><strong>Authentication:</strong> Google Auth, 2FA enabled</p>
+                        <p><strong>Device:</strong> Samsung Galaxy S24 Ultra | <strong>Wallet:</strong> WalletConnect + Google Auth</p>
+                        <p><strong>Balance:</strong> 55.88 internal, 684.61 external | <strong>Auth:</strong> Google Auth, 2FA enabled</p>
                         <p><strong>Use Case:</strong> Community moderator with reputation</p>
                     </div>
 
                     <div class="character-profile">
                         <h3>Antonio Verozqi - Standard User</h3>
-                        <p><strong>Device:</strong> Google Pixel 8 Pro (Tech-savvy)</p>
-                        <p><strong>Wallet:</strong> Trust Wallet + Google Auth</p>
-                        <p><strong>Balance:</strong> 0.98 internal, 6.06 external</p>
-                        <p><strong>Authentication:</strong> Google Auth (Secondary), 2FA enabled</p>
+                        <p><strong>Device:</strong> Google Pixel 8 Pro | <strong>Wallet:</strong> Trust Wallet + Google Auth</p>
+                        <p><strong>Balance:</strong> 0.98 internal, 6.06 external | <strong>Auth:</strong> Google Auth (Secondary), 2FA enabled</p>
                         <p><strong>Use Case:</strong> Regular trader with small balances</p>
                     </div>
 
                     <div class="character-profile">
                         <h3>TwitterProd - Social User</h3>
-                        <p><strong>Device:</strong> iPhone 14 (Social media user)</p>
-                        <p><strong>Wallet:</strong> Rainbow Wallet + Twitter OAuth</p>
-                        <p><strong>Balance:</strong> 2.39 internal, 0 external</p>
-                        <p><strong>Authentication:</strong> X (Twitter) Sign-in, phone-only</p>
+                        <p><strong>Device:</strong> iPhone 14 | <strong>Wallet:</strong> Rainbow Wallet + Twitter OAuth</p>
+                        <p><strong>Balance:</strong> 2.39 internal, 0 external | <strong>Auth:</strong> X (Twitter) Sign-in, phone-only</p>
                         <p><strong>Use Case:</strong> Social media connected user</p>
                     </div>
                 </div>
