set up stake and bridge gherkins

--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
                         <a class="nav-link" href="mobile-testing-gherkins.html">Mobile Testing</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="stake-testing-gherkins.html">Stake Testing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="bridge-testing-gherkins.html">Bridge Testing</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="migration-testing-challenges.html">Testing Challenges</a>
                     </li>
                     <li class="nav-item">
