set up stake and bridge gherkins

--- a/mobile-testing-gherkins.html
+++ b/mobile-testing-gherkins.html
@@ -214,23 +214,23 @@
                         <thead>
                             <tr style="background:#f8f9fa;">
                                 <th style="border:1px solid #e1e8ed;padding:8px;">#</th>
-                                <th style="border:1px solid #e1e8ed;padding:8px;">Gherkin Step (Generic User)</th>
-                                <th style="border:1px solid #e1e8ed;padding:8px;">Browser</th>
-                                <th style="border:1px solid #e1e8ed;padding:8px;">OS</th>
-                                <th style="border:1px solid #e1e8ed;padding:8px;">Network</th>
-                                <th style="border:1px solid #e1e8ed;padding:8px;">Wallet</th>
+                                <th style="border:1px solid #e1e8ed;padding:8px;">Gherkin Step (Generic)</th>
+                                <th style="border:1px solid #e1e8ed;padding:8px;">Keith – iPhone15 / MetaMask</th>
+                                <th style="border:1px solid #e1e8ed;padding:8px;">Kanley – GalaxyS24 / WalletConnect</th>
+                                <th style="border:1px solid #e1e8ed;padding:8px;">Antonio – Pixel8 / Coinbase</th>
+                                <th style="border:1px solid #e1e8ed;padding:8px;">TwitterProd – iPhone14 / WalletConnect</th>
                             </tr>
                         </thead>
                         <tbody>
                             <!-- Example Scenario : Mobile Login -->
-                            <tr><td style="border:1px solid #e1e8ed;padding:6px;">0001</td><td style="border:1px solid #e1e8ed;padding:6px;">Given the user is on the DCP mobile login page</td><td style="border:1px solid #e1e8ed;padding:6px;">Safari<br/>Chrome</td><td style="border:1px solid #e1e8ed;padding:6px;">iOS 16<br/>Android 13</td><td style="border:1px solid #e1e8ed;padding:6px;">Wi-Fi</td><td style="border:1px solid #e1e8ed;padding:6px;">MetaMask</td></tr>
-                            <tr><td style="border:1px solid #e1e8ed;padding:6px;">0002</td><td style="border:1px solid #e1e8ed;padding:6px;">When the user connects their mobile wallet</td><td style="border:1px solid #e1e8ed;padding:6px;">Safari<br/>Chrome</td><td style="border:1px solid #e1e8ed;padding:6px;">iOS 16<br/>Android 13</td><td style="border:1px solid #e1e8ed;padding:6px;">Wi-Fi</td><td style="border:1px solid #e1e8ed;padding:6px;">MetaMask</td></tr>
-                            <tr><td style="border:1px solid #e1e8ed;padding:6px;">0003</td><td style="border:1px solid #e1e8ed;padding:6px;">Then the user should be logged in successfully</td><td style="border:1px solid #e1e8ed;padding:6px;">Safari<br/>Chrome</td><td style="border:1px solid #e1e8ed;padding:6px;">iOS 16<br/>Android 13</td><td style="border:1px solid #e1e8ed;padding:6px;">Wi-Fi</td><td style="border:1px solid #e1e8ed;padding:6px;">MetaMask</td></tr>
+                            <tr><td style="border:1px solid #e1e8ed;padding:6px;">0001</td><td style="border:1px solid #e1e8ed;padding:6px;">Given the user is on the DCP mobile login page</td><td style="border:1px solid #e1e8ed;padding:6px;"></td><td style="border:1px solid #e1e8ed;padding:6px;"></td><td style="border:1px solid #e1e8ed;padding:6px;"></td><td style="border:1px solid #e1e8ed;padding:6px;"></td></tr>
+                            <tr><td style="border:1px solid #e1e8ed;padding:6px;">0002</td><td style="border:1px solid #e1e8ed;padding:6px;">When the user connects their wallet</td><td style="border:1px solid #e1e8ed;padding:6px;"></td><td style="border:1px solid #e1e8ed;padding:6px;"></td><td style="border:1px solid #e1e8ed;padding:6px;"></td><td style="border:1px solid #e1e8ed;padding:6px;"></td></tr>
+                            <tr><td style="border:1px solid #e1e8ed;padding:6px;">0003</td><td style="border:1px solid #e1e8ed;padding:6px;">Then the user should be logged in successfully</td><td style="border:1px solid #e1e8ed;padding:6px;"></td><td style="border:1px solid #e1e8ed;padding:6px;"></td><td style="border:1px solid #e1e8ed;padding:6px;"></td><td style="border:1px solid #e1e8ed;padding:6px;"></td></tr>
 
                             <!-- Example Scenario : Token Claim -->
-                            <tr><td style="border:1px solid #e1e8ed;padding:6px;">0004</td><td style="border:1px solid #e1e8ed;padding:6px;">Given the user has connected a wallet and is on the Token Claim page</td><td style="border:1px solid #e1e8ed;padding:6px;">Chrome</td><td style="border:1px solid #e1e8ed;padding:6px;">Windows 11</td><td style="border:1px solid #e1e8ed;padding:6px;">4 G</td><td style="border:1px solid #e1e8ed;padding:6px;">WalletConnect</td></tr>
-                            <tr><td style="border:1px solid #e1e8ed;padding:6px;">0005</td><td style="border:1px solid #e1e8ed;padding:6px;">When the user taps "Claim"</td><td style="border:1px solid #e1e8ed;padding:6px;">Chrome</td><td style="border:1px solid #e1e8ed;padding:6px;">Windows 11</td><td style="border:1px solid #e1e8ed;padding:6px;">4 G</td><td style="border:1px solid #e1e8ed;padding:6px;">WalletConnect</td></tr>
-                            <tr><td style="border:1px solid #e1e8ed;padding:6px;">0006</td><td style="border:1px solid #e1e8ed;padding:6px;">Then the user should see a success confirmation</td><td style="border:1px solid #e1e8ed;padding:6px;">Chrome</td><td style="border:1px solid #e1e8ed;padding:6px;">Windows 11</td><td style="border:1px solid #e1e8ed;padding:6px;">4 G</td><td style="border:1px solid #e1e8ed;padding:6px;">WalletConnect</td></tr>
+                            <tr><td style="border:1px solid #e1e8ed;padding:6px;">0004</td><td style="border:1px solid #e1e8ed;padding:6px;">Given the user is on the Token Claim page</td><td style="border:1px solid #e1e8ed;padding:6px;"></td><td style="border:1px solid #e1e8ed;padding:6px;"></td><td style="border:1px solid #e1e8ed;padding:6px;"></td><td style="border:1px solid #e1e8ed;padding:6px;"></td></tr>
+                            <tr><td style="border:1px solid #e1e8ed;padding:6px;">0005</td><td style="border:1px solid #e1e8ed;padding:6px;">When the user taps "Claim"</td><td style="border:1px solid #e1e8ed;padding:6px;"></td><td style="border:1px solid #e1e8ed;padding:6px;"></td><td style="border:1px solid #e1e8ed;padding:6px;"></td><td style="border:1px solid #e1e8ed;padding:6px;"></td></tr>
+                            <tr><td style="border:1px solid #e1e8ed;padding:6px;">0006</td><td style="border:1px solid #e1e8ed;padding:6px;">Then the user should see a success confirmation</td><td style="border:1px solid #e1e8ed;padding:6px;"></td><td style="border:1px solid #e1e8ed;padding:6px;"></td><td style="border:1px solid #e1e8ed;padding:6px;"></td><td style="border:1px solid #e1e8ed;padding:6px;"></td></tr>
                         </tbody>
                     </table>
 
